# erc-backend

./: Cargo.toml  ТТ WWT ERC.docx
app/rest/: Cargo.toml
app/rest/src/: main.rs
data/database/: Cargo.toml
data/database/src/: lib.rs  pool.rs
data/database/src/models/: clinics.rs  diseases.rs  erc.rs  mod.rs  relations.rs  users.rs
data/database/src/repositories/: mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/models/: clinics.rs  diseases.rs  erc.rs  mod.rs  users.rs
domain/src/repositories/: database.rs
domain/src/services/: clinic.rs  diseases.rs  erc.rs  mod.rs  user.rs
presentation/api/: Cargo.toml
presentation/api/src/: lib.rs  server.rs
presentation/api/src/controllers/: clinics.rs  diseases.rs  erc.rs  mod.rs  users.rs
presentation/api/src/models/: clinics.rs  diseases.rs  erc.rs  mod.rs  users.rs
